// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomMarker with portal expect to render correctly 1`] = `
<CustomMarker
  anchor={
    {
      "x": 0,
      "y": 0,
    }
  }
  className=""
  google={
    {
      "maps": {
        "ControlPosition": {
          "LEFT_TOP": "left:top",
        },
        "LatLng": [MockFunction],
        "LatLngBounds": [MockFunction],
        "Map": [MockFunction],
        "Marker": [MockFunction],
        "OverlayView": [Function],
        "event": {
          "addListenerOnce": [MockFunction],
        },
      },
    }
  }
  googleMapsInstance={
    {
      "addListener": [MockFunction],
      "fitBounds": [MockFunction],
      "getBounds": [MockFunction],
      "getCenter": [MockFunction],
      "getProjection": [MockFunction],
      "getZoom": [MockFunction],
      "setCenter": [MockFunction],
      "setZoom": [MockFunction],
    }
  }
  hit={
    {
      "_geoloc": {
        "lat": 10,
        "lng": 12,
      },
    }
  }
>
  <Portal
    containerInfo={
      <div>
        <span>
          This is the children.
        </span>
      </div>
    }
  >
    <span>
      This is the children.
    </span>
  </Portal>
</CustomMarker>
`;

exports[`CustomMarker with unstable_renderSubtreeIntoContainer expect to render correctly 1`] = `
<CustomMarker
  anchor={
    {
      "x": 0,
      "y": 0,
    }
  }
  className=""
  google={
    {
      "maps": {
        "ControlPosition": {
          "LEFT_TOP": "left:top",
        },
        "LatLng": [MockFunction],
        "LatLngBounds": [MockFunction],
        "Map": [MockFunction],
        "Marker": [MockFunction],
        "OverlayView": [Function],
        "event": {
          "addListenerOnce": [MockFunction],
        },
      },
    }
  }
  googleMapsInstance={
    {
      "addListener": [MockFunction],
      "fitBounds": [MockFunction],
      "getBounds": [MockFunction],
      "getCenter": [MockFunction],
      "getProjection": [MockFunction],
      "getZoom": [MockFunction],
      "setCenter": [MockFunction],
      "setZoom": [MockFunction],
    }
  }
  hit={
    {
      "_geoloc": {
        "lat": 10,
        "lng": 12,
      },
    }
  }
/>
`;
